--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,15 +28,12 @@ Homepage = "https://github.com/JacobCoffee/pv"
 Repository = "https://github.com/JacobCoffee/pv"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/pv_tool"]
+requires = ["uv_build>=0.7"]
+build-backend = "uv_build"
 
 [tool.ruff]
 line-length = 120
-target-version = "py311"
+target-version = "py314"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
