--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,9 @@ ignore = [
     "C901",    # Complexity (CLI main functions are naturally complex)
     "PLR09",   # Too many X (returns/branches/statements)
     "PLR2004", # Magic values (CLI doesn't need constants for everything)
+    "A005",    # Module shadows stdlib (io.py is fine)
+    "TC003",   # Move imports to TYPE_CHECKING (runtime needed)
+    "RUF022",  # __all__ not sorted (grouped by category)
 ]
 
 [tool.ruff.lint.isort]
@@ -187,6 +190,13 @@ omit = ["*/tests/*"]
 exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
 fail_under = 100
 show_missing = true
+
+[tool.ty.environment]
+python-version = "3.14"
+extra-paths = [".venv/lib/python3.14/site-packages"]
+
+[tool.ty.src]
+exclude = ["tests/**/*.py"]
 
 [tool.uv]
 default-groups = ["dev"]
